Create auto form sync service